--- a/templates/shopCatalog/catalog.html
+++ b/templates/shopCatalog/catalog.html
@@ -1,11 +1,9 @@
-{% extends 'mainTemplate.html'%}
-{% block body_block%}
+{% extends 'mainTemplate.html' %}
+{% block body_block %}
 
-   <h1>It's goods page</h1>
+    <h1>It's goods page</h1>
 
-    {% for good in goods %}
-        <p>
-        {{ good.name }}
-        </p>
+    {% for goodItem in goods %}
+        {% include "shopCatalog/good_item.html" with good=goodItem %}
     {% endfor %}
 {% endblock %}
