add contact list and deny permission to admin's pages

--- a/templates/mainPage.html
+++ b/templates/mainPage.html
@@ -4,4 +4,8 @@
     <h1>Hello world</h1>
     <a href="{% url 'catalog' %}">Goods catalog</a>
     <a href="{% url 'add_good' %}">Add good</a>
+    <a href="{% url 'watched_goods' %}">User watched goods</a>
+    <a href="{% url 'contacts' %}">Contacts</a>
+    <a href="{% url 'site_admin:manage_category' %}">Manage categories</a>
+
 {% endblock %}
