add static files to project

--- a/templates/mainTemplate.html
+++ b/templates/mainTemplate.html
@@ -10,6 +10,7 @@
 {% else %}
     <p>Welcome, new user. Please log in.</p>
     <a href="{% url 'login' %}">Login</a>
+    <a href="{% url 'register' %}">Register</a>
 {% endif %}
 {% block body_block %}
     default text
