--- a/templates/mainPage.html
+++ b/templates/mainPage.html
@@ -1,4 +1,5 @@
 {% extends 'mainTemplate.html' %}
+{%  load static %}
 {% block body_block %}
 
     <h1>Hello world</h1>
@@ -7,5 +8,5 @@
     <a href="{% url 'watched_goods' %}">User watched goods</a>
     <a href="{% url 'contacts' %}">Contacts</a>
     <a href="{% url 'site_admin:manage_category' %}">Manage categories</a>
-
+<img src = "{% static '/static/images/bigBaner.gif' %}">
 {% endblock %}
