add static files to project

--- a/templates/mainPage.html
+++ b/templates/mainPage.html
@@ -1,12 +1,197 @@
 {% extends 'mainTemplate.html' %}
-{%  load static %}
+{% load static %}
+{% block title %} Main page title {% endblock %}
 {% block body_block %}
+    <tr>
+        <td>
+            <table width="920" border="0" cellspacing="0" cellpadding="0">
+                <tr align="left" valign="top">
+                    <td width="192" height="479">
+                        <table width="192" border="0" cellspacing="0" cellpadding="0">
+                            <tr>
+                                <td height="38" class="topMenu LeftMenuHeader">Categories</td>
+                            </tr>
+                        </table>
+                        <table width="100%" border="0" cellspacing="0" cellpadding="0">
+                            <tr>
+                                <td height="216" valign="top">
+                                    <div class="RightMenu">
+                                        <ul>
+                                            <li><a href="http://www.templatesfreelance.com/" id="WhiteColor2">Atcapto
+                                                pecus</a></li>
+                                            <li><a href="http://www.templatesfreelance.com/" id="WhiteColor2">Modo
+                                                uxor</a></li>
+                                            <li><a href="http://www.templatesfreelance.com/"
+                                                   id="WhiteColor2">Genitus</a></li>
+                                            <li><a href="http://www.templatesfreelance.com/" id="WhiteColor2">Valde
+                                                quae</a></li>
+                                            <li><a href="http://www.templatesfreelance.com/" id="WhiteColor2">Velit fere
+                                                elitille</a></li>
+                                            <li><a href="http://www.templatesfreelance.com/" id="WhiteColor2">Autem
+                                                distineo</a></li>
+                                            <li><a href="http://www.templatesfreelance.com/"
+                                                   id="WhiteColor2">Distineo</a></li>
+                                            <li><a href="http://www.templatesfreelance.com/" id="WhiteColor2">Valde
+                                                quae</a></li>
+                                            <li><a href="http://www.templatesfreelance.com/" id="WhiteColor2">Velit fere
+                                                elitille</a></li>
+                                            <li><a href="http://www.templatesfreelance.com/" id="WhiteColor2">Valde
+                                                quae</a></li>
+                                        </ul>
+                                    </div>
+                                </td>
+                            </tr>
+                        </table>
+                        <table width="100%" border="0" cellspacing="0" cellpadding="0">
+                            <tr>
+                                <td><a href="http://www.templatesfreelance.com/"><img src="/static/images/rightBaner.jpg" alt=""
+                                                                                      width="192" height="334"
+                                                                                      border="0"></a></td>
+                            </tr>
+                        </table>
+                    </td>
+                    <td width="727">
 
-    <h1>Hello world</h1>
-    <a href="{% url 'catalog' %}">Goods catalog</a>
-    <a href="{% url 'add_good' %}">Add good</a>
-    <a href="{% url 'watched_goods' %}">User watched goods</a>
-    <a href="{% url 'contacts' %}">Contacts</a>
-    <a href="{% url 'site_admin:manage_category' %}">Manage categories</a>
-<img src = "{% static '/static/images/bigBaner.gif' %}">
+                        <table width="100%" border="0" cellspacing="0" cellpadding="0">
+                            <tr>
+                                <td><a href="http://www.templatesfreelance.com/"><img src="/static/images/bigBaner.gif" alt=""
+                                                                                      width="727" height="312"
+                                                                                      border="0"></a></td>
+                            </tr>
+                            <tr>
+                                <td height="38" class="topMenu LeftMenuHeader">Featured Products<a
+                                        href="http://www.templatesfreelance.com"><img src="/static/images/spacer.gif" alt=""
+                                                                                      width="10" height="10" border="0"></a>
+                                </td>
+                            </tr>
+                        </table>
+
+
+                        <table width="242" height="262" border="0" cellpadding="0" cellspacing="0" class="Pr">
+                            <tr>
+                                <td valign="top" class="BodyBkg">
+                                    <table width="100%" border="0" cellspacing="0" cellpadding="0">
+                                        <tr>
+                                            <td height="50" align="center"><a href="http://www.templatesfreelance.com/">Descisco
+                                                antehabeo distineo<br>
+                                                facilisi tation</a></td>
+                                        </tr>
+                                        <tr>
+                                            <td height="142" align="center"><a
+                                                    href="http://www.templatesfreelance.com/"><img src="/static/images/shop.jpg"
+                                                                                                   alt="" width="217"
+                                                                                                   height="112"
+                                                                                                   border="0"></a></td>
+                                        </tr>
+                                        <tr>
+                                            <td height="34" align="center">starting at <span class="style1">$578</span>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td align="center">
+                                                <table width="210" border="0" cellspacing="0" cellpadding="0">
+                                                    <tr align="center">
+                                                        <td height="35"><a
+                                                                href="http://www.templatesfreelance.com/"><img
+                                                                src="/static/images/bt1.jpg" alt="" width="101" height="29"
+                                                                border="0"></a></td>
+                                                        <td><a href="http://www.templatesfreelance.com/"><img
+                                                                src="/static/images/bt2.jpg" alt="" width="91" height="29"
+                                                                border="0"></a></td>
+                                                    </tr>
+                                                </table>
+                                            </td>
+                                        </tr>
+                                    </table>
+                                </td>
+                            </tr>
+                        </table>
+
+
+                        <table width="242" height="262" border="0" cellpadding="0" cellspacing="0" class="Pr">
+                            <tr>
+                                <td valign="top" class="BodyBkg">
+                                    <table width="100%" border="0" cellspacing="0" cellpadding="0">
+                                        <tr>
+                                            <td height="50" align="center"><a href="http://www.templatesfreelance.com/">Descisco
+                                                antehabeo distineo<br>
+                                                facilisi tation</a></td>
+                                        </tr>
+                                        <tr>
+                                            <td height="142" align="center"><a
+                                                    href="http://www.templatesfreelance.com/"><img src="/static/images/shop.jpg"
+                                                                                                   alt="" width="217"
+                                                                                                   height="112"
+                                                                                                   border="0"></a></td>
+                                        </tr>
+                                        <tr>
+                                            <td height="34" align="center">starting at <span class="style1">$578</span>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td align="center">
+                                                <table width="210" border="0" cellspacing="0" cellpadding="0">
+                                                    <tr align="center">
+                                                        <td height="35"><a
+                                                                href="http://www.templatesfreelance.com/"><img
+                                                                src="/static/images/bt1.jpg" alt="" width="101" height="29"
+                                                                border="0"></a></td>
+                                                        <td><a href="http://www.templatesfreelance.com/"><img
+                                                                src="/static/images/bt2.jpg" alt="" width="91" height="29"
+                                                                border="0"></a></td>
+                                                    </tr>
+                                                </table>
+                                            </td>
+                                        </tr>
+                                    </table>
+                                </td>
+                            </tr>
+                        </table>
+
+
+                        <table width="242" height="262" border="0" cellpadding="0" cellspacing="0" class="Pr">
+                            <tr>
+                                <td valign="top" class="BodyBkg">
+                                    <table width="100%" border="0" cellspacing="0" cellpadding="0">
+                                        <tr>
+                                            <td height="50" align="center"><a href="http://www.templatesfreelance.com/">Descisco
+                                                antehabeo distineo<br>
+                                                facilisi tation</a></td>
+                                        </tr>
+                                        <tr>
+                                            <td height="142" align="center"><a
+                                                    href="http://www.templatesfreelance.com/"><img src="/static/images/shop.jpg"
+                                                                                                   alt="" width="217"
+                                                                                                   height="112"
+                                                                                                   border="0"></a></td>
+                                        </tr>
+                                        <tr>
+                                            <td height="34" align="center">starting at <span class="style1">$578</span>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td align="center">
+                                                <table width="210" border="0" cellspacing="0" cellpadding="0">
+                                                    <tr align="center">
+                                                        <td height="35"><a
+                                                                href="http://www.templatesfreelance.com/"><img
+                                                                src="/static/images/bt1.jpg" alt="" width="101" height="29"
+                                                                border="0"></a></td>
+                                                        <td><a href="http://www.templatesfreelance.com/"><img
+                                                                src="/static/images/bt2.jpg" alt="" width="91" height="29"
+                                                                border="0"></a></td>
+                                                    </tr>
+                                                </table>
+                                            </td>
+                                        </tr>
+                                    </table>
+                                </td>
+                            </tr>
+                        </table>
+
+                    </td>
+                </tr>
+            </table>
+        </td>
+    </tr>
 {% endblock %}
