--- a/templates/shopCatalog/good_item.html
+++ b/templates/shopCatalog/good_item.html
@@ -1,6 +1,12 @@
 <div class="good_container">
-    <a href="/good/{{ good.id }}">
+    <a href="{% url 'good_page' good.id %}">
         <p>{{ good.name }}</p>
     </a>
+
+    <a href="{% url 'add_to_cart' good.id %}">
+        <p>Buy</p>
+    </a>
+
+
     <p>{{ good.isAvailable }}</p>
 </div>
