--- a/templates/mainTemplate.html
+++ b/templates/mainTemplate.html
@@ -5,7 +5,11 @@
 <head>
     <title>{% block title %} My site title {% endblock %}</title>
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+    <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet" type="text/css">
     <link href="{% static "css/style.css" %}" rel="stylesheet" type="text/css">
+
+    <script type="text/javascript" src="/static/js/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" src="/static/js/bootstrap.min.js"></script>
 </head>
 
 <body>
