--- a/templates/shopCatalog/cart.html
+++ b/templates/shopCatalog/cart.html
@@ -8,17 +8,21 @@
     {% else %}
         <h1>Goods in your cart</h1>
     {% endif %}
-    <table width="920" border="0" cellspacing="0" cellpadding="0">
-        {% for item in order.items.all %}
-            <p>{{ item.name }}</p>
-        {% endfor %}
-    </table>
-    <table name="cart">
+    <table class="table table-hover" width="920" border="0" cellspacing="0" cellpadding="0">
         <thead>
-
+        <tr>
+            <th>Good name</th>
+            <th>Good price</th>
+            <th>Delete</th>
+        </tr>
         </thead>
         <tbody>
-
+        {% for item in order.items.all %}
+            <tr>
+                <td><a href="{% url 'good_page' item.id %}">{{ item.name }}</a></td>
+                <td>{{ item.price }}</td>
+                <td><a href="{% url 'delete_from_cart' item.id %}">Delete from cart</a></td>
+            </tr>
+        {% endfor %}
         </tbody>
-    </table>
 {% endblock %}
