--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -7,8 +7,8 @@
         <form action="{% url 'login' %}" method='POST'>
     {% endif %}
 {% csrf_token %}
-<input type="text" name="login"/>
-<input type="password" name="password">
+{{ form.login }}
+{{ form.password }}
 <button type="submit">Login</button>
 </form>
 {% endblock %}
