all pages realized

--- a/templates/shopCatalog/make_order.html
+++ b/templates/shopCatalog/make_order.html
@@ -30,7 +30,7 @@
       </tbody>
     </table>
 
-    <form action="{% url 'order_make' %}" method="post">
+    <form action="{% url 'approve_order' %}" method="post">
 
         <input type="text" name="address"/>
         <input type="text" name="payment"/>
