--- a/templates/users/watched_goods.html
+++ b/templates/users/watched_goods.html
@@ -1,13 +1,16 @@
-{% extends 'mainTemplate.html' %}
+{% extends 'mainTemplate_new.html' %}
 {% block body_block %}
 
     <h1>Your watched good list</h1>
-    {% if goods %}
+    <div class="row">
         {% for goodItem in goods %}
-            {% include "shopCatalog/good_item.html" with good=goodItem %}
+            {% if forloop.counter|divisibleby:3 %}
+                </div>
+                <div class="row">
+            {% else %}
+                {% include "shopCatalog/good_item_catalog.html" with good=goodItem %}
+            {% endif %}
         {% endfor %}
-    {% else %}
-        Watched good list is empty
-    {% endif %}
+        </div>
 
 {% endblock %}
