--- a/templates/shopCatalog/catalog_part.html
+++ b/templates/shopCatalog/catalog_part.html
@@ -1,10 +1,14 @@
-<div class="row">
-    {% for goodItem in good_list %}
-        {% if forloop.counter|divisibleby:3 %}
-            </div>
-            <div class="row">
-        {% else %}
-            {% include "shopCatalog/good_item_catalog.html" with good=goodItem %}
-        {% endif %}
-    {% endfor %}
-    </div>
+{% if good_list %}
+    <div class="row">
+        {% for goodItem in good_list %}
+            {% if forloop.counter|divisibleby:3 %}
+                </div>
+                <div class="row">
+            {% else %}
+                {% include "shopCatalog/good_item_catalog.html" with good=goodItem %}
+            {% endif %}
+        {% endfor %}
+        </div>
+{% else %}
+    <h3>No goods</h3>
+{% endif %}
