--- a/templates/shopCatalog/catalog.html
+++ b/templates/shopCatalog/catalog.html
@@ -12,7 +12,7 @@
     <div class="row">
         <p>
             <label for="amount">Price range:</label>
-            <input type="text" id="amount" readonly style="border:0;font-weight:bold;">
+            <input type="text" id="amount" readonly style="border:0;font-weight:bold;" value="${{ min_price }} - ${{ max_price }}">
         </p>
 
         <div id="slider-range"></div>
